--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -177,7 +177,7 @@
                 </div>
                 <div class="header">
                     <h3>Come and join us for the greatest marathon in the world</h3>
-                    <button class="visit-sparc">Visit Sparc</button>
+                    <a href="https://www.sparc.coop/" class="visit-sparc">Visit Sparc</a>
                 </div>
                 @*<div class="cta-input">
                     <input type="text" placeholder="you@email.com" />
