add 1080HD vimeo video for home--hero hero-image

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -5,8 +5,8 @@
 <div class="home">
     <section class="home--hero">
         <div class="container">
-            <div class="hero--image">
-                <img src="images/Pattern_1.png" />
+            <div class="hero-image">
+                <video class="hero-video" preload="metadata" loop playsinline autoplay src="https://player.vimeo.com/progressive_redirect/playback/775904126/rendition/1080p/file.mp4?loc=external&signature=83dcd3170b373a6f6035e23352af16d267f12d95209df3483e4eb70f25af8d62"></video>
             </div>
             <div class="header">
                 <h1>From one codebase springs many platforms.</h1>
@@ -16,8 +16,8 @@
             </div>
         </div>
     </section>
-    <div class="float-wrapper" id="float-wrapper">
-        <div class="float-spacer"></div>
+    @*<div class="float-wrapper" id="float-wrapper">
+        <div class="float-spacer"></div>*@
         <section class="home--intro">
             <div class="container">
                 <div class="header">
@@ -186,10 +186,9 @@
             </div>
         </section>
         <Footer />
-    </div>
+    @*</div>*@
 </div>
 
 
 @code {
-
 }
