--- a/Sparc.Blossom.Server/Pages/_Host.cshtml
+++ b/Sparc.Blossom.Server/Pages/_Host.cshtml
@@ -11,6 +11,8 @@
     <title>Blossom</title>
     <base href="~/" />
     <link href="css/app.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://player.vimeo.com">
+    <link rel="preconnect" href="https://vod-progressive.akamaized.net">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
