--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -12,22 +12,32 @@
         padding: 150px 0;
     }
 
+    section.home--hero {
+        padding-top: 50px;
+    }
+
     &--hero {
         width: 100%;
         height: 100vh;
         margin: 0 auto;
-        position: fixed;
+        /*position: fixed;
         top: 60%;
         left: 50%;
         transform: translate(-50%, -60%);
-        z-index: 0;
+        z-index: 0;*/
 
         .container {
             padding: 0 15px;
-            padding-top: 80px;
         }
 
-        .hero--image {
+        .hero-image {
+            margin-bottom: -150px;
+
+            video {
+                width: 100%;
+            }
+        }
+        /*.hero-image {
             width: 100%;
             margin: 0 auto;
             margin-bottom: 35px;
@@ -37,7 +47,7 @@
                 width: 40%;
                 max-width: 450px;
             }
-        }
+        }*/
 
         .header {
             width: 809px;
@@ -45,6 +55,7 @@
             text-align: center;
             font-family: 'NimbusSansExtd', sans-serif;
             font-weight: 400;
+            position: relative;
 
             h1 {
                 margin: 0;
@@ -574,15 +585,8 @@
         }
 
         &--hero {
-            .hero--image {
-                width: 80%;
-                margin: 0 auto;
-                margin-bottom: 15px;
-                text-align: center;
-
-                img {
-                    width: 70%;
-                }
+            .hero-image {
+                margin-bottom: -50px;
             }
 
             .header {
@@ -848,14 +852,8 @@
         }
 
         &--hero {
-            .hero--image {
-                width: 100%;
-                margin-bottom: 15px;
-                text-align: center;
-
-                img {
-                    width: 70%;
-                }
+            .hero-image {
+                margin-bottom: -50px;
             }
 
             .header {
