--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -322,29 +322,38 @@ footer .footer--column .column-links a {
 .home section {
   padding: 150px 0;
 }
+.home section.home--hero {
+  padding-top: 50px;
+}
 .home--hero {
   width: 100%;
   height: 100vh;
   margin: 0 auto;
-  position: fixed;
+  /*position: fixed;
   top: 60%;
   left: 50%;
   transform: translate(-50%, -60%);
-  z-index: 0;
+  z-index: 0;*/
+  /*.hero-image {
+      width: 100%;
+      margin: 0 auto;
+      margin-bottom: 35px;
+      text-align: center;
+
+      img {
+          width: 40%;
+          max-width: 450px;
+      }
+  }*/
 }
 .home--hero .container {
   padding: 0 15px;
-  padding-top: 80px;
 }
-.home--hero .hero--image {
+.home--hero .hero-image {
+  margin-bottom: -150px;
+}
+.home--hero .hero-image video {
   width: 100%;
-  margin: 0 auto;
-  margin-bottom: 35px;
-  text-align: center;
-}
-.home--hero .hero--image img {
-  width: 40%;
-  max-width: 450px;
 }
 .home--hero .header {
   width: 809px;
@@ -352,6 +361,7 @@ footer .footer--column .column-links a {
   text-align: center;
   font-family: "NimbusSansExtd", sans-serif;
   font-weight: 400;
+  position: relative;
 }
 .home--hero .header h1 {
   margin: 0;
@@ -730,14 +740,8 @@ footer .footer--column .column-links a {
     width: 100%;
     padding: 80px 0;
   }
-  .home--hero .hero--image {
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 15px;
-    text-align: center;
-  }
-  .home--hero .hero--image img {
-    width: 70%;
+  .home--hero .hero-image {
+    margin-bottom: -50px;
   }
   .home--hero .header {
     width: 100%;
@@ -935,13 +939,8 @@ footer .footer--column .column-links a {
     width: 100%;
     padding: 80px 0;
   }
-  .home--hero .hero--image {
-    width: 100%;
-    margin-bottom: 15px;
-    text-align: center;
-  }
-  .home--hero .hero--image img {
-    width: 70%;
+  .home--hero .hero-image {
+    margin-bottom: -50px;
   }
   .home--hero .header {
     max-width: 100%;
