Switch to background=1 embed for greater autoplay compatibility

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -6,7 +6,9 @@
     <section class="home--hero">
         <div class="container">
             <div class="hero-image">
-                <video class="hero-video" preload="metadata" loop playsinline autoplay src="https://player.vimeo.com/progressive_redirect/playback/775904126/rendition/1080p/file.mp4?loc=external&signature=83dcd3170b373a6f6035e23352af16d267f12d95209df3483e4eb70f25af8d62"></video>
+                <div style="padding:56.25% 0 0 0;position:relative;">
+                    <iframe src="https://player.vimeo.com/video/775904126?h=0e3ec42e1f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;background=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Pattern_3 Color-change 4K.mp4"></iframe>
+                </div>
             </div>
             <div class="header">
                 <h1>From one codebase springs many platforms.</h1>
